--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-aria.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-messages.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.js"></script>
-    <script type="text/javascript" src="./js/ang.js"></script>
+    <script type="text/javascript" src="./javascripts/main.js"></script>
     <title>Movies</title>
     <style rel="stylesheet" type="text/css">
         *{
