--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <md-card style="background-color: #9acfea">
                     <md-card-content layout-lg="row" layout-align="stretch center">
                         <md-card layout-align="center center">
-                            <img ng-click="showDialog()" style="display: block" class="img-responsive" ng-src="{{dat.poster_path == null? mc.noPoster:mc.base_url+dat.poster_path}}">
+                            <img ng-click="myDialog()" style="display: block" class="img-responsive" ng-src="{{dat.poster_path == null? mc.noPoster:mc.base_url+dat.poster_path}}">
                         </md-card>
                         <md-card style="background-color: #5bc0de" flex>
                             <md-card-content>
